# telegram-gifts

client/: .env.example  index.html  package-lock.json  package.json
client/src/: App.tsx  index.css  main.tsx
client/src/assets/: radar.json
client/src/components/: ActiveUsers.tsx  BackdropCircle.tsx  CustomDropdown.tsx  DonateModal.tsx  ErrorBoundary.tsx  Footer.tsx  GiftCard.tsx  GiftFilters.tsx  GiftHistory.tsx  GiftIcon.tsx  GiftMonitorInput.tsx  GiftMonitorList.tsx  GiftMonitorStatus.tsx  GiftNameSelector.tsx  GiftStats.tsx  GiftVisualizer.tsx  Layout.tsx  ModelCard.tsx  ModelImage.tsx  ModelOwnersModal.tsx  ModelsList.tsx  NFTCard.tsx  NFTGiftCard.tsx  Navbar.tsx  OwnerCard.tsx  OwnersSearch.tsx  PatternIcon.tsx  Portal.tsx  SafeLottie.tsx  SearchForm.tsx  SearchResults.tsx  SearchSelectionHint.tsx  TGSticker.tsx
client/src/constants/: giftNames.ts
client/src/hooks/: useAutoRefresh.ts  useDonateModal.ts  useUserTimezone.ts  useWebSocket.ts
client/src/pages/: Analytics.tsx  DonatePage.tsx  GiftDetails.tsx  GiftList.tsx  GiftMonitorPage.tsx  NFTGiftDetails.tsx  NFTGiftList.tsx  (+1 more)
server/: .env  .env.example  database.sqlite  package-lock.json  package.json  tsconfig.json
server-nft/: .env  .gitignore  my-account-shm  my-account-wal  package-lock.json  package.json  tsconfig.json
server-nft/src/: app.ts  cron.ts
server-rust/: Cargo.toml
server-rust/src/: main.rs
server-rust/src/handlers/: error.rs  mod.rs  monitor.rs  ws.rs
server-rust/src/models/: gift.rs  mod.rs
server-rust/src/services/: checker.rs  mod.rs
server/src/: index.ts
(+28 files in other folders)
